testsuite/tests/properties/invalid_eq/correct_node/test.lkt
from common import FooNode

class Example: FooNode {
    @exported fun prop(): Bool = node.parent == node.as[FooNode]
}
